Adding an EFCore datamodel to access SQLite for consumption in UWP UI Layer Added splash screen and badge logos Refactored project name to Inventory.Core.UILayer from Inventory.UWPLayer

--- a/Inventory/Inventory.UWPLayer/App.xaml
+++ b/Inventory/Inventory.UWPLayer/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Inventory.UWPLayer.App"
+    x:Class="Inventory.Core.UILayer.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Inventory.UWPLayer"
+    xmlns:local="using:Inventory.Core.UILayer"
     RequestedTheme="Light">
 
 </Application>
